test/libsolidity/syntaxTests/dataLocations/function_argument_location_specifier_test_library.sol
library test {
    function f(bytes calldata) public;
}
// ----
// TypeError: (30-35): Location has to be memory or storage for public function in library.
